# simd-erasure-core

./: Cargo.toml  README.md
benches/: benchmarks.rs
examples/: quick-comparison.rs  test-random-roundtrips.rs
src/: lib.rs  reed_solomon.rs
tests/: integration_test.rs
